feat: quantize dynamic (qint8)

--- a/.gitignore
+++ b/.gitignore
@@ -207,4 +207,9 @@ mlruns/
 *.db
 mlartifacts/
 images/
+
+# model file
 *.pt
+
+# Ignore secrets folder containing credentials
+iac/ansible/secrets/
