feat: expose /metrics for kube-pro-stack

--- a/helm/apps/hematology-api/templates/service.yaml
+++ b/helm/apps/hematology-api/templates/service.yaml
@@ -7,5 +7,6 @@ spec:
   selector:
     app: {{ .Release.Name }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: metrics
+      port: {{ .Values.service.port }}
       targetPort: 8000
