--- a/helm/apps/hematology-api/templates/deployment.yaml
+++ b/helm/apps/hematology-api/templates/deployment.yaml
@@ -51,6 +51,7 @@ spec:
       containers:
         - name: app
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           volumeMounts:
