fix: use tag number when pull image in helm upgrade (old: latest)

--- a/helm/apps/hematology-api/templates/deployment.yaml
+++ b/helm/apps/hematology-api/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
       containers:
         - name: app
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
           volumeMounts:
