fix: ingress class in grafana-ingress

--- a/helm/monitoring/grafana/templates/ingress.yaml
+++ b/helm/monitoring/grafana/templates/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: grafana
   namespace: monitoring
 spec:
+  ingressClassName: nginx
   rules:
   - host: {{ .Values.ingress.host }}
     http:
