feat: Establish comprehensive monitoring and alerting for the hematology API with Prometheus, Grafana, and Alertmanager, and introduce a client script.

--- a/helm/apps/hematology-api/templates/deployment.yaml
+++ b/helm/apps/hematology-api/templates/deployment.yaml
@@ -53,7 +53,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8000
+            - name: metrics
+              containerPort: 8000
           volumeMounts:
             - name: model-volume
               mountPath: /models
