--- a/helm/monitoring/grafana/templates/ingress.yaml
+++ b/helm/monitoring/grafana/templates/ingress.yaml
@@ -1,18 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: grafana
+  annotations:    
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: 5m  
+  name: {{ .Release.Name }}
   namespace: monitoring
 spec:
-  ingressClassName: nginx
   rules:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
-      - path: {{ .Values.ingress.path }}
-        pathType: Prefix
-        backend:
+      - backend:
           service:
-            name: {{ .Values.ingress.service }}
+            name: {{ .Values.service.name }}
             port:
-              number: 80
+              number: {{ .Values.service.port }}
+        path: /
+        pathType: ImplementationSpecific
