--- a/helm/monitoring/grafana/values.yaml
+++ b/helm/monitoring/grafana/values.yaml
@@ -1,4 +1,6 @@
 ingress:
-  host: hematology-api.example.com
-  path: /grafana
-  service: kube-prometheus-stack-grafana
+  host: grafana.example.com
+  path: /
+service:
+  name: kube-prometheus-stack-grafana
+  port: 80
