feat: Introduce a new UI application, integrate S3/MinIO for prediction storage, and enhance the API with history and image retrieval endpoints.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 TRACKING_URI="http://127.0.0.1:5000"
 EXPERIMENT_NAME="automated-hematology-system"
+S3_ENDPOINT_URL="http://localhost:9000"
+S3_ACCESS_KEY="KflxNANXLAgnFKyHjauI"
+S3_SECRET_KEY="Te1jypkr2xR91yu9F9de2Y0iaYYUIVSBHqineiZE"
+S3_BUCKET_NAME="ahs-predictions"
