--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ uvicorn==0.35.0
 flask==3.1.2
 gunicorn==23.0.0
 pydantic==2.11.7
+streamlit==1.32.0
 opencv-python==4.12.0.88
 albumentations==2.0.8
 ansible==8.3.0
@@ -24,3 +25,4 @@ tqdm==4.67.1
 loguru==0.7.3
 requests==2.31.0
 python-multipart==0.0.20
+boto3==1.34.0
