feat: Configure UI to connect to the API and integrate MinIO credentials into the API deployment via a new Kubernetes secret.

--- a/helm/apps/hematology-ui/templates/ui-deployment.yaml
+++ b/helm/apps/hematology-ui/templates/ui-deployment.yaml
@@ -16,7 +16,9 @@ spec:
         - name: ui
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: API_URL
+              value: "http://hematology-api.model-serving:8080"
           ports:
             - name: ui
               containerPort: 8501
-
