--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ TRACKING_URI="http://127.0.0.1:5000"
 EXPERIMENT_NAME="automated-hematology-system"
 GOOGLE_APPLICATION_CREDENTIALS=iac/ansible/secrets/ahsys-480510-844a29b58a02.json
 S3_ENDPOINT="http://minio.storage:9000"
-S3_ACCESS_KEY="bBI9zPIfOEJPvDNBXZo8"
-S3_SECRET_KEY="xysWXV4FCiKBWvoQ9fdkwjXbVnWuAni9NC1aYnyc"
+S3_ACCESS_KEY=""
+S3_SECRET_KEY=""
 S3_BUCKET_NAME="ahs-predictions"
