--- a/helm/apps/hematology-api/values.yaml
+++ b/helm/apps/hematology-api/values.yaml
@@ -1,5 +1,20 @@
 replicaCount: 2
 
+autoscaling:
+  enabled: true
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+resources:
+  limits:
+    cpu: 200m
+    memory: 256Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
+
 image:
   repository: lethanhhiep0220/ahs
   tag: latest
